# rustmark

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  todo.md  vite.config.js
.claude/: launch.json
src/: doc-settings.js  editor.js  export.js  fileops.js  linter.js  main.js  outline.js  preview.js  spellcheck-cm.js  spellcheck.js  style.css  table-creator.js  tabs.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
